Added test for CompilerImpl